@@ -9,8 +9,8 @@ AUX mixxx-1.11.9999-system-libs.patch 8072 SHA256 996c6a170e06a5b4b0250f6fcefd80
 AUX mixxx-9999-docs.patch 445 SHA256 9250ab6b2368ad03b8c54d767fda1d23cd826340189cf8989a3156b76b375411 SHA512 cad756af2cfc90433b20d0a867aed9b85ee822691c5c8adc97de6943273823a769d8e6d4912a71f00bbead2cd96cff91cc12fb2fb8de547bf76dabd74372490e WHIRLPOOL 91b48e4577ff127065bbcae34d945613029850b43831209cc1b1f9c2d1da7fc3c02c9fa96dd958fe85f934749bcbace1b2c6c3c358306dc6d6ea91935337a327
 AUX mixxx-9999-system-libs.patch 6867 SHA256 687975453918d6ded0379091e88c6469a909284ce5e5aa3dc942921982c59e59 SHA512 e9427e4c170321ce975de557e4b0d7ad442807fa72ac7a58c80db12c8cf44d1ba63005eeaa2545b1dee4db5250d049f0a0d40235e41ced75aaf8247349241ec1 WHIRLPOOL 440326c32b69f5b865dea7a35b1f6af770db4909512b13fc1b8418f8ce52a28bd990f04fb850969269e023009458a1cc6efa0c537c2a6a8997c48a8f158f0a35
 DIST mixxx-1.11.0-src.tar.gz 24473835 SHA256 00961b5d6c1e6d6686d76e55de474b943bbeff4e59b163dddd3d9940dc1b0331 SHA512 a42c2e3a648986e401f9812315942b5c68e0bc4f47ce867eb043d64f9d7836860e414b04b5e5da52b0541da5069d231774f30e965bcf3bd0db09f6bca74876c2 WHIRLPOOL 9ab4de6bfa5840500f04a4e7d523b6546e0ef08ade017f14b73425e205f039a6da11604f2b0e902085ff3062fff451385f984735029592d4b10ac3d4e0c985b1
-EBUILD mixxx-1.11.0.ebuild 2268 SHA256 3073dae0132a766076bef6ea221a524ebc0e3a31f2c1d60cab1fad902bb4b4b3 SHA512 441141d4c366cff455998cbd42daed61e745b91940b39dccc5f4a3cce268dcd16d1ae7b1e55033bf53f68a7c65aa486f9f91b571c5888d02d8d1b7f43934168d WHIRLPOOL 895a2e2288c6e46298c4bd31dff4ca1fb900b1c324906b27c0e1efbedc5499c0a727afc8bd8cd168f3af944c9e3e00e382271dfa9ee88111889a203d9c078658
-EBUILD mixxx-1.11.9999.ebuild 2263 SHA256 3d0226957b626e92f6ba2f9d6a7b2d764f6282f940ef77bd534b11fb609b1fc8 SHA512 b94e1a928cbb6f12abb19e0080bb098c58f4458010b866feb6358f745d72208524369e55d3ed8e06c24ef315426a85e9d14263faf52e54e14fdbb9846bb30ccf WHIRLPOOL 2117ce352078cd1e2ca9e8c7abd7d91e61d13b9a18ab3ec880b462c332e8a413b130bc1af150136a0beab41ccbb81bdc229c4bb29f14c673c8a3a24ffd3136c3
-EBUILD mixxx-9999.ebuild 2274 SHA256 aecdf1ee0d06e3dcaf6bd4a13f5b75abaf7c38b710f943d21bf284d7abb1aece SHA512 480a0f083db88c011b6e9bbf7b313c07d3a43d043d262feccfaac826ade7086a94f13353ba80aec4fb7d858419b44395b7f29b790fb174f6b9ad2372c69b19fe WHIRLPOOL 446aec1c8820aa1b11a716f795d920ca801eefb9cb21f7d7462de89e5cc37942154af5dc2b06570ca6b6fcfc81e874689e8d6aca4afd97489009f8920e9e3106
-MISC ChangeLog 8033 SHA256 2876d58d75b4edb0a2697cd0ce32b33c8698dd3ec9e3e1da90cd6c7b9fbacc9b SHA512 b813c9fe8b6a88abe4715d55a987fc69d04d01d02f207eb7a91e095f45ce4d49a88e3b8cb18c14e9392ef49094c4a621d999a9b83602f6768473d5a0026baadc WHIRLPOOL 75d8da906619098e51b008174ce4f2ced8d000c639c3c677301ff5b3ddda149096070fe8db3bb24afb2fb63f5d68e7907a863510bd612b2ebf052af67a153d37
+EBUILD mixxx-1.11.0.ebuild 2270 SHA256 158966156ffddc892840ccda153b154803bbd32d85662969fdd3b837f048356f SHA512 47591b740700e66128dc0cdfcdc47b8f99d85ca55278e09befef72d5499f474ecb204052889a5913112d6cecf4466240d985c1a12c846ece744c89b1a36b580f WHIRLPOOL e5ea32be07c5afef9816c9a4b27a3d29722e438eef84498c713254dc56bc5a27edb6b271f21e28a300b889da2cbae7a6c0db1217aad6e169c4ccd907973b3270
+EBUILD mixxx-1.11.9999.ebuild 2265 SHA256 6965d1b87975bfb0e90013a69f79056a5264747156646060ab63ace82d4b29e8 SHA512 7fad78c0b5d0711e37c5345584ee5de1e41f096106cd41d26b8e0d101a5e9760d499dfcd022c6f820c9b206bc442fe18fe66eb2399032be2d1e19ad7eaddbc19 WHIRLPOOL 204f5a2c6ab20e16819fe99b0ba15f58086e90e2db9d029768eac5a57a4332906b8f6254a83623b914a525a212e5f3df6a9356049c63983216cf1d9caa884c61
+EBUILD mixxx-9999.ebuild 2333 SHA256 5b7af6dccebb1aa524d37e3edc9189e80932e42728b7137dd9977c563e63ebcd SHA512 f5fcfbc5a29e4a39e6e7f73eb6dbddde1b373e5a7c2f8b42f2d6a7720d2ad99b69bf58b81f70038feebc96f46f6216bf74498a581605fa847198aebda0ab2ecf WHIRLPOOL 1f07065071bf42723502473111140607d9c55e78c62411363a4a466aa3d237d4fddaf2a7a223f670d15d6f328337f840907497535af5193f15093be8e05349c3
+MISC ChangeLog 8257 SHA256 aadd55750770c6faed596e1935ad00f9af1ac5a17ec3592a8fae1b746c21b434 SHA512 f705341e0dec49311df72e4308e1a413af53197bd5846728bf8a78652542cf5251bf8ccadb54e56fba9e1faf09ea24728f975d2fa2ff023e8692355b240279db WHIRLPOOL 1ebb24fe84bda384708e6bf415ad7d8109be5b9f7e765446af81a4fb517d13e17344a43fddd922be8faa771db5c979b88c8a9055bee1e38013022d6be5899b7e
 MISC metadata.xml 485 SHA256 2d28e5b3222a404cd0ae26b12d70640ed15c665204a43496862b77f0396f2038 SHA512 cf3578bae5e75f6b5db4ca71cd00a9389878d87d0983b0c5e0b2858336bd30186df13c58b03b9f1f2e698b651d360058ed0ff63771be6ba98128ae30b886d7f7 WHIRLPOOL 275c04e470f80968e15e0c3ef77cfa4f6fe89917b01ce1d94ea7bebdfd30ee54baae32678d79e7d28dde24bd0f4ad1f8756f185638e77421ab22ebca8e42c555
